@@ -5205,6 +5205,9 @@ PRE(sys_fcntl)
    case VKI_F_SETLK64:
    case VKI_F_SETLKW64:
 #  endif
+   case VKI_F_OFD_GETLK:
+   case VKI_F_OFD_SETLK:
+   case VKI_F_OFD_SETLKW:
       PRINT("sys_fcntl[ARG3=='lock'] ( %ld, %ld, %#lx )", ARG1,ARG2,ARG3);
       PRE_REG_READ3(long, "fcntl",
                     unsigned int, fd, unsigned int, cmd,
